# lurp

./: .gitignore  CMakeLists.txt  README.md  issues.md  package.bat  package.sh  script.md
.github/workflows/: c-cpp.yml
drivers/: platform.cpp  platform.h  task.h
drivers/console/: consolebattle.cpp  consolebattle.h  consoleboard.cpp  consoleboard.h  consoleutil.cpp  consoleutil.h  dye.h  ionic.cpp  ionic.h  main.cpp
drivers/twod/: config.cpp  config.h  config2d.cpp  config2d.h  drawable.h  gamescene.cpp  gamescene.h  mainscene.cpp  mainscene.h  nuk.cpp  nuk.h  nuklear.cpp  scene.h  statemachine.cpp  statemachine.h  test2d.cpp  test2d.h  text.cpp  text.h  texture.cpp  texture.h  textureupdate.h  titlescene.cpp  titlescene.h  tween.h  twod.cpp  xform.cpp  xform.h
game/chullu/: chullu.lua  chullu.md  config.lua
game/example-battle/: example-battle.lua
game/example-script/: example-script.lua
game/example-zone/: example-zone.lua
game/saves/: saves.md
game/simple/: simple.lua
script/: _map.lua  _meta.lua  _test.lua  testscript.lua  testscript.md  testzones.lua
src/: SpookyV2.cpp  SpookyV2.h  battle.cpp  battle.h  config.cpp  config.h  coredata.cpp  coredata.h  debug.h  defs.cpp  defs.h  die.cpp  die.h  geom.h  graph.h  iscript.h  items.cpp  items.h  lua.hpp  luabridge.cpp  luabridge.h  lurpvariant.cpp  lurpvariant.h  mapdata.cpp  mapdata.h  markdown.cpp  markdown.h  scriptasset.cpp  scriptasset.h  scriptbridge.cpp  scriptbridge.h  scriptdriver.cpp  scriptdriver.h  scripthelper.cpp  scripthelper.h  scripttypes.cpp  scripttypes.h  test.cpp  test.h  tree.cpp  (+9 more)
